--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: zilili
+title: Texture Theme
 author: GitHub User
 email: your-email@domain.com
 description: > # this means to ignore newlines until "show_exerpts:"
